syntax = "proto3";

package sharering.shareledger.sdistribution;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "shareledger/sdistribution/params.proto";
import "shareledger/sdistribution/reward.proto";
// this line is used by starport scaffolding # 1


option go_package = "github.com/sharering/shareledger/x/sdistribution/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sharering/shareledger/sdistribution/params";
  }
  // Queries a Reward by index.
  rpc Reward(QueryGetRewardRequest) returns (QueryGetRewardResponse) {
    option (google.api.http).get = "/sharering/shareledger/sdistribution/reward/{index}";
  }

  // Queries a list of Reward items.
  rpc RewardAll(QueryAllRewardRequest) returns (QueryAllRewardResponse) {
    option (google.api.http).get = "/sharering/shareledger/sdistribution/reward";
  }

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetRewardRequest {
  string index = 1;
}

message QueryGetRewardResponse {
  Reward reward = 1 [(gogoproto.nullable) = false];
}

message QueryAllRewardRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRewardResponse {
  repeated Reward reward = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
